--- a/compiler/rustc_mir_dataflow/Cargo.toml
+++ b/compiler/rustc_mir_dataflow/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [lib]
 
 [dependencies]
+either = "1.5.0"
 polonius-engine = "0.13.0"
 regex = "1"
 smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
